# MyGitClient

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  windows-portable.yml
scripts/: build-windows.ps1
src/mygitclient/: __init__.py  __main__.py  app.py  logging_config.py  theme.py  updates.py
src/mygitclient/git/: __init__.py  errors.py  executable.py  models.py  operation_queue.py  parsers.py  runner.py  service.py
src/mygitclient/resources/: __init__.py
src/mygitclient/ui/: __init__.py  branches_panel.py  changes_panel.py  commit_graph.py  commit_text.py  diff_gutter.py  diff_highlighter.py  diff_selection.py  diff_view.py  history_panel.py  main_window.py  operation_output.py  refs_panel.py  repositories_panel.py  tags_panel.py
src/mygitclient/workspace/: __init__.py  discovery.py  manager.py
tests/: test_app.py  test_branches_panel.py  test_changes_panel.py  test_commit_text.py  test_diff_highlighter.py  test_diff_selection.py  test_diff_view.py  test_git_errors.py  test_git_parser.py  test_git_runner.py  test_git_service.py  test_history_panel.py  test_logging_config.py  test_operation_duration.py  test_operation_queue.py  test_refs_panel.py  test_repositories_panel.py  test_tags_panel.py  test_ui_changes.py  test_ui_diff.py  test_ui_shell.py  test_updates.py  test_workspace.py  test_workspace_discovery.py
