[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "mygitclient"
version = "0.2.3"
description = "A focused desktop Git client with visual diffs and precise staging"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
keywords = ["git", "desktop", "qt", "pyside6", "diff"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "platformdirs>=4.3",
    "PySide6>=6.8",
]

[project.urls]
Homepage = "https://github.com/john27328/MyGitClient"
Issues = "https://github.com/john27328/MyGitClient/issues"
Releases = "https://github.com/john27328/MyGitClient/releases"

[project.optional-dependencies]
dev = [
    "pyright>=1.1.400",
    "pytest>=8.3",
    "pytest-qt>=4.4",
    "ruff>=0.11",
]
build = [
    "pyinstaller>=6.16",
]

[project.scripts]
mygitclient = "mygitclient.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mygitclient"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
